# rpi-hifi

./: chassis.3mf  chassis.slvs  chassis.stl  display-ss1306.slvs  notes.md
case/: chassis-back.3mf  chassis-back.stl  chassis-front.3mf  chassis-front.stl  chassis-slice.slvs  chassis.slvs  chassis.stl  foot.3mf  foot.slvs  foot.stl  pi4-dims.slvs
hifi-control/: Cargo.toml
hifi-control/src/: audio.rs  display.rs  main.rs
hifi-display/: Cargo.toml  Cross.toml
hifi-display/src/: main.rs
