[package]
name = "hifi-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
embedded-graphics = "0.8.0"
embedded-hal = "0.2.7"
profont = { git = "https://github.com/sambenko/profont", branch = "embedded-graphics-0.8.0-fixes"}
rppal = { version = "0.14.1", features = ["hal"] }
ssd1306 = { git = "https://github.com/jamwaffles/ssd1306.git", branch = "master" }
